--- a/SiaMVC/src/main/webapp/resources/style.css
+++ b/SiaMVC/src/main/webapp/resources/style.css
@@ -1,5 +1,16 @@
 body {
+	background: #ff9933 url(images/cloudy-sky.jpg) no-repeat
+	fixed left top;
+	color: #333333;
 	font-family: sans-serif;
+	font-size: 0.75em;
+	font-size-adjust: none;
+	font-stretch: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: 1.5;
+	text-align: center;
 }
 
 .nodesList h1 {
