--- a/SiaMVC/src/main/webapp/WEB-INF/templates/nodes.html
+++ b/SiaMVC/src/main/webapp/WEB-INF/templates/nodes.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spitter</title>
+    <title>Nodes</title>
     <link rel="stylesheet"
           type="text/css"
           th:href="@{/resources/style.css}" />
