--- a/SiaMVC/src/main/webapp/WEB-INF/templates/home.html
+++ b/SiaMVC/src/main/webapp/WEB-INF/templates/home.html
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <title>Spring Thymeleaf</title>
     <link rel="stylesheet"
@@ -7,11 +8,17 @@
           th:href="@{/resources/style.css}"/>
 </head>
 <body>
+
+<div sec:authorize="isAuthenticated()">
+    Hello there...<span sec:authentication="name">user-name</span>
+</div>
+
 <div id="header" th:include="page :: header"></div>
+
 <div id="content">
     <h1>Welcome</h1>
-    <a th:href="@{/nodes}">Nodes</a> |
-    <a th:href="@{/user/register}">Register</a>
+    <a th:href="@{/nodes}">Nodes</a>
+
     <br/>
 
     View: <span th:text="${view}">unknown</span>
