--- a/SiaMVC/src/main/webapp/WEB-INF/templates/node.html
+++ b/SiaMVC/src/main/webapp/WEB-INF/templates/node.html
@@ -4,7 +4,7 @@
     <title>Node</title>
     <link rel="stylesheet"
           type="text/css"
-          th:href="@{/resources/style.css}"></link>
+          th:href="@{/resources/style.css}"/>
 </head>
 <body>
 <div id="header" th:include="page :: header"></div>
