--- a/SiaMVC/src/main/webapp/WEB-INF/templates/page.html
+++ b/SiaMVC/src/main/webapp/WEB-INF/templates/page.html
@@ -1,16 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-      
-  <body>
-  
-    <div th:fragment="header">
-      <a th:href="@{/}">
-        <img th:src="@{/resources/images/duke.png}" border="0" /></a>
-    </div>
 
-    <div>Content goes here</div>
-  
-    <div th:fragment="copy">Copyright &copy; Oleg B. </div>
-  </body>
-  
+<body>
+
+<div th:fragment="header">
+    <a th:href="@{/}">
+        <img th:src="@{/resources/images/duke.png}" border="0"/></a>
+    <a th:href="@{/logout}">
+        <img th:src="@{/resources/images/exit.png}" border="0"/></a>
+</div>
+
+<div>Content goes here</div>
+
+<div th:fragment="copy">Copyright &copy; Oleg B.</div>
+</body>
+
 </html>
