--- a/SiaMVC/src/main/webapp/WEB-INF/templates/registerForm.html
+++ b/SiaMVC/src/main/webapp/WEB-INF/templates/registerForm.html
@@ -11,7 +11,7 @@
 <div id="content">
     <h1>Register</h1>
 
-    <form method="POST" th:object="${user}" enctype="multipart/form-data">
+    <form method="POST" th:object="${user}" th:action="@{/user/register}">
         <div class="errors" th:if="${#fields.hasErrors('*')}">
             <ul>
                 <li th:each="err : ${#fields.errors('*')}"
@@ -39,10 +39,10 @@
         <input type="password" th:field="*{password}"
                th:class="${#fields.hasErrors('password')}? 'error'"/><br/>
 
-        <label>Profile Picture</label>
-        <input type="file"
-               name="profilePicture"
-               accept="image/jpeg,image/png,image/gif"/><br/>
+        <!--<label>Profile Picture</label>-->
+        <!--<input type="file"-->
+               <!--name="profilePicture"-->
+               <!--accept="image/jpeg,image/png,image/gif"/><br/>-->
 
         <input type="submit" value="Register"/>
 
